<resources>
    <string name="app_name">Slipi Prototype</string>
    <string name="text_signin">Sign In</string>
    <string name="text_welcome_back">Welcome Back 👋</string>
    <string name="text_email">Email</string>
    <string name="text_email_hint">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="logo_splash_screen">Logo Splash screen</string>
    <string name="text_admin_client">Admin Client</string>
    <string name="text_user">User</string>
    <string name="text_approval">Approval</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="password_not_valid">Password Not Valid</string>
    <string name="text_don_t_have_account_sign_up_here">Don\'t Have Account ? Sign Up Here</string>
    <string name="text_how_are_you_today">How Are You Today ?</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_register_here">Register Here ✍</string>
    <string name="text_use_your_email_and_password">Use Your Email And Password</string>
    <string name="text_already_have_an_account_login_here">Already Have An Account ? Login Here</string>
    <string name="text_register">Register</string>
    <string name="text_masuk">Masuk</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_history">History</string>
    <string name="text_camera">Camera</string>
    <string name="text_inbox">Inbox</string>
    <string name="text_account">Account</string>
    <string name="text_cluster">Cluster</string>
    <string name="text_parking">Parking</string>
    <string name="text_forgot_password">Forgot Password</string>
</resources>