<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.slipi.slipiprototype.home.navigation.beranda.BerandaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.slipi.slipiprototype.home.navigation.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.slipi.slipiprototype.home.navigation.camera.CameraFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.slipi.slipiprototype.home.navigation.inbox.InboxFragment"
        android:label="@string/text_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.slipi.slipiprototype.home.navigation.account.AccountFragment"
        android:label="@string/text_account"
        tools:layout="@layout/fragment_account" />


</navigation>